tests/ui/frontmatter/multifrontmatter.stderr
error: expected item, found `-`
  --> $DIR/multifrontmatter.rs:4:1
   |
LL | ---
   | ^ expected item
   |
   = note: for a full list of items that can appear in modules, see <https://doc.rust-lang.org/reference/items.html>

error: aborting due to 1 previous error

